--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@babel/cli": "^7.8.4",
     "@babel/core": "^7.9.0",
     "babel-plugin-tester": "^9.0.1",
+    "codecov": "^3.6.5",
     "jest": "^25.4.0"
   }
 }
